--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,24 @@ version: "3.8"
 
 services:
   db:
-    image: postgres:15
+    image: mysql:8.0
     container_name: trading_bot_db
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: trading_bot_db
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: trading_bot_db
+      MYSQL_USER: trading_user
+      MYSQL_PASSWORD: trading_password
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - mysql_data:/var/lib/mysql
     networks:
       - trading_bot_network
     restart: unless-stopped
+    ports:
+      - "3306:3306"
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
 
   orchestrator:
     build:
@@ -20,25 +27,25 @@ services:
       dockerfile: Dockerfile
     container_name: trading_bot_orchestrator
     environment:
-      - SECRET_KEY=${SECRET_KEY}
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/trading_bot_db
+      - SECRET_KEY=${SECRET_KEY:-your-secret-key-change-in-production}
+      - DATABASE_URL=mysql+pymysql://trading_user:trading_password@db:3306/trading_bot_db
       - ENCRYPTION_KEY=${ENCRYPTION_KEY}
       - DOCKER_NETWORK=trading_bot_network
       - BOT_IMAGE=trading-bot:latest
-      - REQUIRE_SUBSCRIPTION=False
     ports:
       - "5000:5000"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./orchestrator:/app
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - trading_bot_network
     restart: unless-stopped
 
 volumes:
-  postgres_data:
+  mysql_data:
 
 networks:
   trading_bot_network:
